# DAQs

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  annotated.html  classes.html  code_coverage.html  dir_000001_000003.html  dir_000002_000006.html  dir_000003_000005.html  dir_000003_000006.html  dir_000004_000006.html  dir_000006_000005.html  dir_000008_000001.html  dir_000008_000009.html  dir_000009_000001.html  dir_5f9dbca8f56b2c71aca22ef83e293b7c.html  dir_5f9dbca8f56b2c71aca22ef83e293b7c_dep.map  dir_5f9dbca8f56b2c71aca22ef83e293b7c_dep.md5  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.map  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.md5  dir_6a931ced4bbd25fcb6582f141d910770.html  dir_80678ad9564ea178d68b449b474dbfa3.html  dir_80678ad9564ea178d68b449b474dbfa3_dep.map  dir_80678ad9564ea178d68b449b474dbfa3_dep.md5  dir_8883661a594d45f653e8517bdd738ebc.html  dir_8883661a594d45f653e8517bdd738ebc_dep.map  dir_8883661a594d45f653e8517bdd738ebc_dep.md5  dir_a533da79f5ada0d9c6f37d8b7f640740.html  dir_a533da79f5ada0d9c6f37d8b7f640740_dep.map  dir_a533da79f5ada0d9c6f37d8b7f640740_dep.md5  dir_a634d0110f674991bc7aeafe7d3a8162.html  dir_a634d0110f674991bc7aeafe7d3a8162_dep.map  dir_a634d0110f674991bc7aeafe7d3a8162_dep.md5  dir_ab22fda3c8f9843ae01adc0760188b4e.html  dir_ab22fda3c8f9843ae01adc0760188b4e_dep.map  dir_ab22fda3c8f9843ae01adc0760188b4e_dep.md5  dir_b50028397970ea82fa15369c14f55ad8.html  (+38 more)
android/: configAndroid.json.in
ci/scripts/: android.sh
cmake/: ClangFormat.cmake  CodeCoverage.cmake  Doxygen.cmake
coverage_html/: index-sort-f.html  index-sort-l.html  index.html
coverage_html/data-access/: dataaccess.cc.func-sort-c.html  dataaccess.cc.func.html  dataaccess.cc.gcov.html  dataaccess.h.func-sort-c.html  dataaccess.h.func.html  dataaccess.h.gcov.html  idataaccess.h.func-sort-c.html  idataaccess.h.func.html  idataaccess.h.gcov.html  index-sort-f.html  index-sort-l.html  index.html
coverage_html/data-model/: index-sort-f.html  index-sort-l.html  index.html  variable.cc.func-sort-c.html  variable.cc.func.html  variable.cc.gcov.html  variable.h.func-sort-c.html  variable.h.func.html  variable.h.gcov.html  varvalue.cc.func-sort-c.html  varvalue.cc.func.html  varvalue.cc.gcov.html  varvalue.h.func-sort-c.html  varvalue.h.func.html  varvalue.h.gcov.html
coverage_html/data-source/: idatasource.h.func-sort-c.html  idatasource.h.func.html  idatasource.h.gcov.html  index-sort-f.html  index-sort-l.html  index.html  sqlitewrapper.cc.func-sort-c.html  sqlitewrapper.cc.func.html  sqlitewrapper.cc.gcov.html
d0/d71/: classVarValue-members.html
d0/da9/: varvaluemodel_8cc__incl.map  varvaluemodel_8cc__incl.md5
d0/dc5/: classVarValuesModel-members.html
d0/dc7/: idatasource_8h__dep__incl.map  idatasource_8h__dep__incl.md5
d1/d1e/: classSQLiteWrapperTest.html  classSQLiteWrapperTest_a6f99b715f3b3d751c6db394ea7b97cc2_cgraph.map  classSQLiteWrapperTest_a6f99b715f3b3d751c6db394ea7b97cc2_cgraph.md5  classSQLiteWrapperTest_ab9de52f92dbd95252ec67a26440d0782_icgraph.map  classSQLiteWrapperTest_ab9de52f92dbd95252ec67a26440d0782_icgraph.md5
d1/d24/: mocksqlitewrapper_8h.html  mocksqlitewrapper_8h_source.html
d1/d37/: classClient.html
d1/d4e/: client_8h__dep__incl.map  client_8h__dep__incl.md5
d1/d4f/: classIDataAccess.html
d1/d53/: classserver.html  classserver_a48a3f10f46b75019a34870ab9804b665_cgraph.map  classserver_a48a3f10f46b75019a34870ab9804b665_cgraph.md5  classserver_a48a3f10f46b75019a34870ab9804b665_icgraph.map  classserver_a48a3f10f46b75019a34870ab9804b665_icgraph.md5  classserver_a635b93cfa0814c8653a65617ca3d4f17_cgraph.map  classserver_a635b93cfa0814c8653a65617ca3d4f17_cgraph.md5  classserver_a635b93cfa0814c8653a65617ca3d4f17_icgraph.map  (+3 more)
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_2.js  all_3.js  all_5.js  all_6.js  all_8.js  all_9.js  all_a.js  all_b.js  all_d.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_5.js  classes_6.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  files_6.js  functions_0.js  functions_2.js  functions_3.js  functions_4.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  (+22 more)
src/: CMakeLists.txt  MainPage.h
src/data-access/: dataaccess.cc  dataaccess.h  idataaccess.h
src/data-model/: CMakeLists.txt  idatamodel.h  sqlitewrapper.cc  sqlitewrapper.h
src/data-model/test/: sqlitedatamodel_integration_test.cc  testutil.cc  testutil.h
src/database-server/: CMakeLists.txt  istorage.h  server.cc  session.cc  session.h  sqlitewrapper.cc  sqlitewrapper.h
src/database-server/client/: CMakeLists.txt  client.cc  client.h
src/database-server/data-access/: CMakeLists.txt  dataaccess.cc  dataaccess.h  idataaccess.h
src/database-server/data-access/test/: dataaccess_unit_test.cc  dataaccesstest.cc  mocksqlitewrapper.h
src/database-server/data-model/: CMakeLists.txt  idatamodel.h  sqlitewrapper.cc  sqlitewrapper.h  variable.cc  variable.h  varvalue.cc  varvalue.h
src/database-server/data-model/test/: sqlitedatamodel_integration_test.cc  testutil.h
src/database-server/data-source/: CMakeLists.txt  idatamodel.h  idatasource.h  sqlitewrapper.cc  sqlitewrapper.h
src/database-server/data-source/test/: sqlitedatasource_integration_test.cc  testutil.cc
src/database-server/doc/: protocol.msc
src/database-server/test/: sqlitedatamodel_integration_test.cc  testutil.cc  testutil.h
src/doc/: CMakeLists.txt
src/hmi/: CMakeLists.txt  Historic.qml  Page1Form.ui.qml  Page2Form.ui.qml  RubberBand.qml  historicdata.cc  historicdata.h  hmi.pro  main.cc  main.qml  qml.qrc
src/hmi/+android/: RubberBand.qml
src/hmi/model/: varmodel.cc  varmodel.h  varsmodel.cc  varsmodel.h  varvaluemodel.cc  varvaluemodel.h  varvaluesmodel.cc  varvaluesmodel.h
src/hmi/qml/: ColorSelector.qml  ColorSelectorForm.ui.qml  Historic.qml  Variable.qml  VariableDialog.qml  VariableDialogForm.ui.qml  main.qml  qml.qrc
src/protocol/: CMakeLists.txt  messages.proto
(+301 files in other folders)
